--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -323,7 +323,7 @@ skymapDesc: "Carte du ciel"
 # Form add observation
 addObservation: DSO planner
 addObservationDesc: Sauvegardez ou planifiez vos observations en ajoutant les objets que vous avez observé.
-scheduleObs: Préparer une soirée
+scheduleObs: Proposer une soirée
 scheduleObsDesc: Organisez une soirée d'observation astronomique et faites découvrir les merveilles du ciel
 form.ok.addDoc: Observation ajoutée, retrouvez-la <a href="%url%">ici</a>.
 form.error.addDoc: Erreur d'ajout de documents, rééssayez ou contactez l'administrateur.
