--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -364,6 +364,7 @@ observation:
     label: Lieu de l'observation
     placeholder: "Ex: Cazevieille, France..."
 # Event
+organiser: Organisateur(s)
 event:
     name:
         label: "Nom (*)"
