--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -291,7 +291,7 @@ select:
     label: Trier par
     placeholder: Sélectionnez votre option
 # Form contact
-contact.title: "Contactez-nous"
+contact.title: "Contact"
 form.error.sending: "Problème d'envoi du message, veuillez réassayer plus tard"
 form.ok.sending: "Votre message a bien été envoyé. Nous vous répondrons le plus vite possible"
 form.error.message: "Veuillez corriger les erreurs"
