--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -126,7 +126,7 @@ de: German
 # Homepage
 homepage.message: Discover wonders and mysteries of the universe
 homepage.desc: "%sitename% is a celestial atlas containing more than 9500 deep sky objects, grouped by different catalog or type of object. Search, discover and marvel."
-home.search.placeholder: Search in catalogs...
+home.search.placeholder: "Research a galaxy, a nebula, a constellation..."
 dayImage: Image of the day
 # View full
 dso.title.seo: "%title%, %type%"
