--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -125,7 +125,7 @@ de: Allemand
 # Homepage
 homepage.message: Découvrez les merveilles et mystères de l'univers
 homepage.desc: "%sitename% est un atlas céleste contenant plus de 9500 objets du ciel profond, regroupés par différents catalogue ou type d'objet. Cherchez, découvrez et émerveillez-vous : l'univers est merveilleux"
-home.search.placeholder: Rechercher dans les catalogues...
+home.search.placeholder: "Rechercher une galaxy, une nébuleuse, une constellation..."
 dayImage: L'image du jour
 # View full
 dso.title.seo: "%title%, %type%"
