Last update page : add elastic search request

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -152,6 +152,7 @@ discover: Découvreur
 discoverYear: Année découverte
 galery: Galerie d'images
 # Vue list
+last_update_item: Mise à jour
 filteringList: Filtrer la liste par constellations, type de catalogues, type d'objets, magnitude...et découvrez les plus beaux objets du ciel.
 filters: Filtres
 listOrderAsc: Tri ascendant
