--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -153,6 +153,7 @@ discover: Discovery
 discoverYear: Year
 galery: Gallery
 # Vue list
+last_update_item: Last update
 filteringList: Filter list items by constellation, type and magnitude...and discover most beautiful celestial objects.
 filters: Filters
 listOrderAsc: Sort ascendant
