--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -90,6 +90,7 @@ catalog.sast: Sanduleak-Stephenson
 catalog.sha: Shapley
 catalog.shk: Shakhbazian
 catalog.sl: Sandqvist-Lindroos
+catalog.stdr: Strottner-Drechsler
 catalog.sto: Stock open clusters
 catalog.ter: Terzan
 catalog.ton: Tonantzintla
