--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -87,6 +87,7 @@ catalog.ru: Ruprecht
 catalog.sast: Sanduleak-Stephenson
 catalog.sha: Shapley
 catalog.sl: Sandqvist-Lindroos
+catalog.stdr: Strottner-Drechsler
 catalog.sto: Stock open clusters
 catalog.ter: Terzan
 catalog.ton: Tonantzintla
