Add new catalog : Trumpler

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -94,6 +94,7 @@ catalog.stdr: Strottner-Drechsler
 catalog.sto: Stock open clusters
 catalog.ter: Terzan
 catalog.ton: Tonantzintla
+catalog.tr: Trumpler
 catalog.ugc: Uppsala General Catalog
 catalog.vdb: Van den Bergh
 catalog.vv: Vorontsov-Vel’yaminov
