--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -130,6 +130,7 @@ de: Allemand
 homepage.message: Découvrez les merveilles et mystères de l'univers
 homepage.desc: "%sitename% est un atlas céleste contenant plus de 9500 objets du ciel profond, regroupés par différents catalogue ou type d'objet. Cherchez, découvrez et émerveillez-vous : l'univers est merveilleux"
 home.search.placeholder: "Rechercher une galaxy, une nébuleuse, une constellation..."
+home.search.placeholder_mobile: "Rechercher..."
 dayImage: L'image du jour
 # View full
 dso.title.seo: "%title%, %type%"
