--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -138,9 +138,21 @@ dso.desc.seo: "\"%title%\" est un est objet de type %type% (magnitude apparente 
 info: Informations
 desigs: Autres désignations
 magnitude: Magnitude
-constellation: Constellation|Constellations
-const_id: Constellation|Constellations
-constId: Constellation|Constellations
+constellation: >-
+    {count, plural,
+        one   {Constellation}
+        other {Constellations}
+    }
+const_id: >-
+    {count, plural,
+        one   {Constellation}
+        other {Constellations}
+    }
+constId: >-
+    {count, plural,
+        one   {Constellation}
+        other {Constellations}
+    }
 dim: Dimension
 dimExp: Dimension angulaire en minutes d'arcs
 distAl: Distance (années-lumière)
