--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -457,3 +457,7 @@ support:
     second: "If you want to help me, yours donations are  welcome. You can make a little donation with PayPal or Tipeee with one of buttons below :"
     third: Thank you very much :).
     fourth: Stéphane, webmaster of %sitename%
+# social network
+social_network:
+    follow_us: Follow us
+    description: Join us on Facebook and Twitter to follow our news as well as discover the most beautiful deep sky objects.
