--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -451,3 +451,4 @@ support:
 social_network:
     follow_us: Suivez-nous
     description: Venez nous retrouver sur Facebook et Twitter pour suivre notre actualité ainsi que découvrir les plus beaux objets du ciel profond.
+    closePopin: Fermer
