--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -75,6 +75,7 @@ catalog.lon: Longmore
 catalog.lyn: Lynga
 catalog.may: Mayer
 catalog.mel: Melotte
+catalog.mgc: Morphological Catalogue of Galaxies
 catalog.mkw: Minkowski
 catalog.mzl: Menzel
 catalog.mrk: Markarian
