Add new data and new catalog

--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -76,6 +76,7 @@ catalog.mgc: Morphological Catalogue of Galaxies
 catalog.mkw: Minkowski
 catalog.mzl: Menzel
 catalog.mrk: Markarian
+catalog.mwp: Motch-Werner-Pakull
 catalog.ocl: OCL
 catalog.pal: Pal - Palomar
 catalog.pmb: Peimbert
