--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -74,6 +74,7 @@ catalog.may: Mayer
 catalog.mel: Melotte
 catalog.mgc: Morphological Catalogue of Galaxies
 catalog.mkw: Minkowski
+catalog.mwp: Motch-Werner-Pakull
 catalog.mzl: Menzel
 catalog.mrk: Markarian
 catalog.ocl: OCL
