--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -72,7 +72,7 @@ catalog.lon: Longmore
 catalog.lyn: Lynga
 catalog.may: Mayer
 catalog.mel: Melotte
-catalog.mgc: Morphological Catalogue of Galaxies
+catalog.mcg: Morphological Catalogue of Galaxies
 catalog.mkw: Minkowski
 catalog.mzl: Menzel
 catalog.mrk: Markarian
